# cookiecutter-cruft-poetry-tox-pre-commit-ci-cd

./: .gitlab-ci.yml  .log4brains.yml  .makefile  .pre-commit-config.yaml  CONTRIBUTING_GUIDE.rst  LICENSE  Makefile  README.md  cookiecutter.json  pyproject.toml  tox.ini
.github/: CONTRIBUTING_GUIDE.rst  dependabot.yml  labels.yml
.github/workflows/: auto-merge-dependabot.yml  ci.yml  constraints.txt  dependabot_pr.yml  dependabot_trunk_push.yml  labeler.yml  publish_benchmarks.yml  publish_log4brains.yml  release.yml  reset-instance.yml
adl/: 404.html  index.html
adl/404/: index.html
adl/_next/data/32xT5tF5FoVsllTrkHp-U/: index.json
adl/_next/data/7JqWpPRA9iELtF8i_FTXJ/: index.json
adl/_next/data/JKpFrM8wzh5Gb9Ge9qnzu/: index.json
adl/_next/data/N2v-yeodQBuzpuMRzcMa5/: index.json
adl/_next/data/n6CwYf22A4EBaMLn2cvqF/: index.json
adl/_next/data/okgj6JhghQBlW4m8xpCoD/: index.json
adl/_next/data/qVmmsVRi1or-XuF4tCHWN/: index.json
adl/_next/data/vOYQKMRHq_6t24nqUyhPh/: index.json
adl/_next/data/xdEf5iKnOJsn3626SfEdt/: index.json
adl/_next/static/--CNqkg3amYP8VoUgyV0L/: _buildManifest.js
adl/_next/static/--NkAtyMvjPNVLTkMSqdl/: _buildManifest.js
adl/_next/static/-1eumN-Tre300JYxT1cSt/: _buildManifest.js
adl/_next/static/-1orKGt28DEz4qWQeMJ5a/: _buildManifest.js
adl/_next/static/-3e3p0KqETwPY3V9G1H4f/: _buildManifest.js
adl/_next/static/-7cqj1Lm-DKc9GI_BAXos/: _buildManifest.js
adl/_next/static/-9GpBmzLtDp-7k0YpozAC/: _buildManifest.js
adl/_next/static/-9gh9OhRvIzFkxy96_imB/: _buildManifest.js
adl/_next/static/-ANN0FHGlZDqyzsnJwGDb/: _buildManifest.js
adl/_next/static/-ARFZNU-xSIjxhOqrK-P3/: _buildManifest.js
adl/_next/static/-C7wGZ1rRlw1hDdQXUtPT/: _buildManifest.js
adl/_next/static/-DTWpd2t6plclnU_IhWx9/: _buildManifest.js
adl/_next/static/-FLFH1XAhgnUBiYIYLL4d/: _buildManifest.js
adl/_next/static/-INhtL0lCNZLWlpfvF1-F/: _buildManifest.js
adl/_next/static/-JdZEj4QU6SLTky_6QQlR/: _buildManifest.js
adl/_next/static/-P3VdTAWYd-9wG25rNy8C/: _buildManifest.js
adl/_next/static/-TaE7PA1JrafTijeDSP09/: _buildManifest.js
adl/_next/static/-U9hPOc73wXxpX_DOuxUP/: _buildManifest.js
adl/_next/static/-WyAAsiKkuPTlXu4jDxSO/: _buildManifest.js
adl/_next/static/-X57a7HPVEm1txbnR2g-R/: _buildManifest.js
adl/_next/static/-XJS42dHgElQWMqTRYsmz/: _buildManifest.js
adl/_next/static/-ZFf4erPSC3lC73UZCjsh/: _buildManifest.js
adl/_next/static/-aCKEalW2TvRviGKykYIy/: _buildManifest.js
adl/_next/static/-bVSr3h7HY_WJE-cKsYKJ/: _buildManifest.js
adl/_next/static/-d2nPJABl5_JGXeLffSB4/: _buildManifest.js
adl/_next/static/-djblZPSQG0VMaPeYNsEj/: _buildManifest.js
adl/_next/static/-dx3tenWqpQy6EfsH2gHY/: _buildManifest.js
adl/_next/static/-fAbbg5iOUm-5b8NxpA9B/: _buildManifest.js
adl/_next/static/-gZY25nBM04_7-2eOebY6/: _buildManifest.js
adl/_next/static/-gxdm7TnzpDJ_4SJxVEKe/: _buildManifest.js
adl/_next/static/-koRxHB3zt6iW6Cb12nw6/: _buildManifest.js
adl/_next/static/-kzg3jwD-odRI2MVjMKAo/: _buildManifest.js
adl/adr/: 20210124-use-log4brains-to-manage-the-adrs.html  20210124-use-markdown-architectural-decision-records.html
adl/adr/20210124-use-log4brains-to-manage-the-adrs/: index.html
adl/adr/20210124-use-markdown-architectural-decision-records/: index.html
adl/data/Mxk0EzPkoiLzcfbWGGOXw/: adrs.json
adr/: 404.html  index.html
adr/adr/: 20210124-use-log4brains-to-manage-the-adrs.html  20210124-use-markdown-architectural-decision-records.html
adr/data/mJRuVQ0hs2UiSZ2Qwc8Fj/: adrs.json
adr/data/pJhAHHuZS2JNSNNQOPZSV/: search-index.json
dev/"py39-benchmark"/: data.js
dev/py39-benchmark/: data.js
docs/: requirements.txt
docs/source/: adr.md  changelog.rst  conf.py  index.md
docs/source/adr/: README.md
docs/source/akm/: README.md  index.md
hooks/: post_gen_project.py
tests/: __init__.py  conftest.py  test_icontract_benchmark.py
{{cookiecutter.project_slug}}/: .env  .gitattributes  .gitignore  .log4brains.yml  .pre-commit-config.yaml  .readthedocs.yml  CODE_OF_CONDUCT.rst  CONTRIBUTING_GUIDE.rst  Dockerfile  Makefile  README.md  build.py  pyproject.toml  tox.ini
{{cookiecutter.project_slug}}/.github/: CONTRIBUTING_GUIDE.rst  dependabot.yml
{{cookiecutter.project_slug}}/.github/workflows/: auto-merge-dependabot.yml  ci.yml  constraints.txt  dependabot_pr.yml  dependabot_trunk_push.yml  docs.yml  labeler.yml  main.yml  publish_benchmarks.yml  publish_log4brains.yml  release.yml
{{cookiecutter.project_slug}}/.makefile/: docker.mk  docs.mk  help.mk  project_orchestration.mk  test.mk  version_tags.mk
{{cookiecutter.project_slug}}/docs/: Makefile  requirements.txt
{{cookiecutter.project_slug}}/docs/source/: .env  adr.md  changelog.rst  conf.py  index.md  production-readiness-checklist.md  usage.md  usage.rst
{{cookiecutter.project_slug}}/docs/source/adr/: README.md
{{cookiecutter.project_slug}}/docs/source/akm/: 20210124-use-log4brains-to-manage-the-adrs.md  20210124-use-markdown-architectural-decision-records.md  README.md  index.md
{{cookiecutter.project_slug}}/docs/source/production-readiness-checklist/: LICENSE  README.md
{{cookiecutter.project_slug}}/docs/source/production-readiness-checklist/docs/concepts/: automatic-backups.md  design-doc.md  graceful-shutdown.md  gradual-deploy.md  pod-disruption-budget.md  readiness-probe.md  request-id.md  resource-requests-and-limits.md  stateless-server.md  zero-downtime-deploy.md
{{cookiecutter.project_slug}}/docs/source/production-readiness-checklist/docs/guides/: check-production-readiness.md  configure-rolling-update.md  configure-tracing.md
{{cookiecutter.project_slug}}/docs/source/production-readiness-checklist/docs/references/: design-doc-template.md
{{cookiecutter.project_slug}}/docs/source/ref/api/: modules.rst
{{cookiecutter.project_slug}}/docs/source/ref/dev/: _DEVELOPER_ONLY_MODULE.rst  modules.rst
{{cookiecutter.project_slug}}/tests/: test_main.py  utils.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: __init__.py  __main__.py  entrypoint  example.ipynb  main.py
(+2963 files in other folders)
