[tool.poetry]
name = "cookiecutter-cruft-poetry-tox-pre-commit-ci-cd"
version = "0.4.0"
description = "SonoSim CorSAIR-standardized Python project creation and synchronization"
authors = ["Teo Zosa <teo@sonosim.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/TeoZosa/cookiecutter-cruft-poetry-tox-pre-commit-ci-cd"
homepage = "https://github.com/TeoZosa/cookiecutter-cruft-poetry-tox-pre-commit-ci-cd"
keywords = [
    "Cookiecutter",
    "Cruft",
    "Dependabot",
    "GitHub Actions",
    "Poetry",
    "Pre-commit",
    "Python",
    "Release Drafter",
    "Tox"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
]
# Dummy package for `pip install .` compatibility
packages = [
    { include = "{{cookiecutter.package_name}}", from = "{{cookiecutter.project_slug}}" },
]

[tool.poetry.dependencies]
python = "^3.8"
# Project boilerplate synchronizer
cruft = "^2.9.0"

# Project cookiecutter dependencies
hypothesis = "^6.31.6"
python-dotenv = "^0.19.2"
importlib-metadata = "^4.10.0"
structlog-sentry-logger = "^0.15.0"
typer = {extras = ["all"], version = "^0.3.2"}

# Documentation
emoji = { version = "^1.6.1", optional = true}
myst-parser = { version = "^0.16.1", optional = true}
pygments = { version = "^2.10.0", optional = true}
sphinx = { version = "^4.3.2", optional = true}
sphinx-autodoc-typehints = { version = "^1.12.0", optional = true}
sphinx-rtd-theme = { version = "^1.0.0", optional = true}
sphinxcontrib-apidoc = { version = "^0.3.0", optional = true}
sphinxcontrib-confluencebuilder = { version = "^1.7.1", optional = true}
types-emoji = { version = "^1.2.6", optional = true}

[tool.poetry.dev-dependencies]
# Type Checking and Data Validation
mypy = "^0.920" # Static type checker

# Testing
pytest = "^6.2.5"
pytest-benchmark = {extras = ["histogram"], version = "^3.4.1"}
pytest-cov = "^3.0.0"
pytest-emoji = "^0.2.0"
pytest-mock = "^3.6.1"
pytest-sugar = "^0.9.4"
pytest-xdist = "^2.5.0"
icontract = "^2.6.0"
xdoctest = {extras = ["all"], version = "^0.15.10"}
tox = "^3.24.4"

# Linting
## Code formatting
black = "^21.11b1" # see: https://black.readthedocs.io/en/stable/editor_integration.html
## Code quality
flakehell = {git="https://github.com/KPLauritzen/flakehell", rev ="d644612"}
pylint = "^2.12.2"
## Automation and management
pre-commit = "^2.16.0"

# Documentation
darglint = "^1.8.1"

[tool.poetry.extras]
docs = [
    "emoji", # Render emoji shortcodes
    "myst-parser",
    "pygments",
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
    "sphinxcontrib-apidoc",
    "sphinxcontrib-confluencebuilder",
    "types-emoji",
]

#################################################################################
# Tooling configs                                                               #
#################################################################################

[tool.flakehell]
# specify any flake8 options
exclude = [".*"] # Ignore dotfiles
# make output nice
format = "grouped"
# show line of source code in output
show_source = true
# temporary fix for flake8 version 3.9.1 compatibility
extended_default_ignore=[]  # see https://github.com/flakehell/flakehell/issues/10

# list of plugins and rules for them
[tool.flakehell.plugins]
# cyclomatic complexity (https://github.com/PyCQA/mccabe)
mccabe = ["+*"]
# include everything in pyflakes except F401
pyflakes = ["+*", "-F401"]
# include everything in pycodestyle except what Black covers
pycodestyle = ["+*",
    "-E203", # Whitespace before ":"
    "-E501", # Line too long (82 > 78 characters)
    "-W503"  # Line break occurred before a binary operator <- this is now considered best practice by PEP 8
]

[tool.isort]
profile = "black"
atomic = true
combine_as_imports = true

[mypy]
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_context = true
show_error_codes = true

[tool.pylint.basic]
good-names-rgxs = ["^Test_.*$"]

[tool.pylint.messages_control]
disable = [
  # Explicitly document only as needed
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  # Black & Flake8 purview
  "line-too-long",
  "bad-continuation",
  "c-extension-no-member",
]

[tool.pylint.similarities]
# Ignore imports when computing similarities.
ignore-imports = "yes"

[tool.pytest.ini_options]
addopts = ["-rfsxX", "-l", "--tb=short", "--strict-markers", "-vv", "--emoji", "--xdoctest"]
xfail_strict = true
testpaths = ["tests",]
norecursedirs = [".*", "*.egg", "build", "dist",]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
