[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.friendly_name}}"
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]
license = "Apache-2.0"
readme = "README.md"
repository = "{{ cookiecutter.project_repository_url }}"
homepage = "{{ cookiecutter.project_repository_url }}"
include = ["{{cookiecutter.package_name}}/py.typed"]
keywords = []
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.build]
script = "build.py"
generate-setup-file = false

[tool.poetry.urls]
Changelog = "{{ cookiecutter.project_repository_url }}/releases"

[tool.poetry.dependencies]
python = "^3.7"

# Monitoring and Observability
sentry-sdk = "^1.1.0"
structlog-sentry-logger = "^0.9.0"

# Type Checking and Data Validation
icontract = "^2.5.3" # Design-by-contract support
typeguard = "^2.10.0" # Runtime type checker; Note: Mypyc-compiled C-extensions also perform runtime type checking.
{% if cookiecutter.pure_jupyter_notebook_project == 'yes' %}
# Jupyter Notebook
jupyter = "^1.0.0"
matplotlib = "^3.4.2"
{%- endif %}

# Documentation
emoji = { version = "^1.4.2", optional = true}
myst-parser = { version = "^0.15.1", optional = true}
pygments = { version = "^2.9.0", optional = true}
sphinx = { version = "^4.1.2", optional = true}
sphinx-autoapi = { version = "^1.8.1", optional = true}
sphinx-rtd-theme = { version = "^0.5.1", optional = true}
sphinxcontrib-confluencebuilder = { version = "^1.5.0", optional = true}
typer-cli = { version = "^0.0.12", optional = true}
types-emoji = { version = "^1.2.4", optional = true} # PEP 561 compliant stub package for mypy

# Project-Specific
importlib-metadata = "^4.6.3"
python-dotenv = "^0.19.0"
rich = "^10.6.0"
typer = {extras = ["all"], version = "^0.3.2"}

[tool.poetry.dev-dependencies]
# Standardized Developer Workflow Orchestration
cruft = "^2.6.0" # Automated Cookiecutter template synchronization

# Type Checking and Data Validation
mypy = "^0.910" # Static type checker (includes Mypyc Python module to C-Extension compiler, enabled by standard Python type annotations)

# Testing
{%- if cookiecutter.jupyter_notebook_project == 'yes' %}
nbqa = "^1.1.0"
{%- endif %}
pytest = "^6.2.4"
pytest-benchmark = {extras = ["histogram"], version = "^3.4.1"}
pytest-cov = "^2.12.1"
# Fixes:
#   ```
#   Coverage 6.0b1 starts to use a modern hash algorithm (sha256) when
#   fingerprinting for high-security environments.
#   ```
# Temporary fix until official 6.0 version is released included and in `pytest-cov`;
coverage = {version = "^6.0b1", allow-prereleases = true}
pytest-emoji = "^0.2.0"
pytest-mock = "^3.6.1"
pytest-sugar = "^0.9.4"
pytest-xdist = "^2.3.0"
hypothesis = "^6.10.1"
icontract-hypothesis = "^1.1.0"
mutmut = "^2.2.0"
xdoctest = {extras = ["all"], version = "^0.15.6"}
tox = "^3.24.0"
tox-wheel = "^0.6.0"

# Linting
## Code formatting
black = "^21.7b0" # see: https://black.readthedocs.io/en/stable/editor_integration.html
## Code quality
flakehell = "^0.9.0"
pylint = "^2.9.6"
## Automation and management
pre-commit = "^2.12.1"

# CI/CD
tox-gh-actions = "^2.6.0"

# Documentation
darglint = "^1.5.8"
{%- if cookiecutter.adr_documentation_support == 'yes' %}
nodeenv = "^1.5.0" # ADR documentation Node dependency
{%- endif %}

[tool.poetry.extras]
docs = [
    "emoji", # Render emoji shortcodes
    "myst-parser",
    "pygments",
    "sphinx",
    "sphinx-autoapi",
    "sphinx-rtd-theme",
    "sphinxcontrib-confluencebuilder",
    "typer-cli",
    "types-emoji",
]


[tool.poetry.scripts]
"{{cookiecutter.project_slug}}" = "{{cookiecutter.package_name}}.main:app"

#################################################################################
# Tooling configs                                                               #
#################################################################################
[tool.coverage.run]
branch = true
concurrency = ["multiprocessing"]
parallel = true
source = ["{{cookiecutter.package_name}}"]

[tool.coverage.report]
exclude_lines =[
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
fail_under = 100
show_missing = true
skip_covered = true

[tool.cruft]
skip = [
    ".env",
    "{{cookiecutter.package_name}}/__init__.py",
    "docs/source/.env",
]

[tool.flakehell]
# specify any flake8 options
exclude = [".*"] # Ignore dotfiles
# make output nice
format = "grouped"
# show line of source code in output
show_source = true
# temporary fix for flake8 version 3.9.1 compatibility
extended_default_ignore=[]  # see https://github.com/flakehell/flakehell/issues/10

# list of plugins and rules for them
[tool.flakehell.plugins]
# cyclomatic complexity (https://github.com/PyCQA/mccabe)
mccabe = ["+*"]
# include everything in pyflakes except F401
pyflakes = ["+*", "-F401"]
# include everything in pycodestyle except what Black covers
pycodestyle = ["+*",
    "-E203", # Whitespace before ":"
    "-E501", # Line too long (82 > 78 characters)
    "-W503",  # Line break occurred before a binary operator <- this is now considered best practice by PEP 8
{%- if cookiecutter.jupyter_notebook_project == 'yes' %}
    # Ignore errors resulting from Jupyter notebook to Python module portability formatting
    "-E265", # block comment should start with '# '
    # Ignore errors resulting from Jupyter notebook-style programming
    "-E402", # module level import not at top of file
{%- endif %}
]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
fail-under = 0 # adjust `fail-under` value as quality standards permit
whitelist-regex = []
color = true

[tool.isort]
profile = "black"
atomic = true
combine_as_imports = true

[tool.mypy]
disallow_untyped_defs = true
files = "**/*.py"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_context = true
show_error_codes = true

[tool.pylint.basic]
good-names-rgxs = ["^Test_.*$"]

[tool.pylint.messages_control]
disable = [
  # Explicitly document only as needed
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  # Black & Flake8 purview
  "line-too-long",
  "bad-continuation",
  "c-extension-no-member",
{%- if cookiecutter.jupyter_notebook_project == 'yes' %}
  # Ignore errors resulting from Jupyter notebook-style programming
  "invalid-name",
  "redefined-outer-name",
  "reimported",
  "ungrouped-imports",
  "wrong-import-order",
  "wrong-import-position",
{%- endif %}
]

[tool.pylint.similarities]
# Ignore imports when computing similarities.
ignore-imports = "yes"

[tool.pytest.ini_options]
addopts = ["-rfsxX", "-l", "--tb=short", "--strict-markers", "-vv", "--emoji", "--xdoctest"]
xfail_strict = true
testpaths = ["tests",]
norecursedirs = [".*", "*.egg", "build", "dist",]

[build-system]
requires = ["poetry-core>=1.0.0", "mypy"]
build-backend = "poetry.core.masonry.api"
