[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.friendly_name}}"
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]
license = "Apache-2.0"
readme = "README.md"
repository = "{{ cookiecutter.project_repository_url }}"
homepage = "{{ cookiecutter.project_repository_url }}"
include = ["{{cookiecutter.package_name}}/py.typed"]
keywords = []
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

#{%- if cookiecutter.jupyter_notebook_project != 'yes' %}
[tool.poetry.build]
script = "build.py"
generate-setup-file = true
#{%- endif %}

[tool.poetry.urls]
Changelog = "{{ cookiecutter.project_repository_url }}/releases"

[tool.poetry.dependencies]
python = "^3.8,<3.11"

# Monitoring and Observability
sentry-sdk = "^1.5.6"
structlog-sentry-logger = "^0.17.3"

#{%- if cookiecutter.jupyter_notebook_project != 'no' %}
# Jupyter Notebook
jupyter = "^1.0.0"
matplotlib = "^3.5.1"
#{%- endif %}
#{%- if cookiecutter.project_boilerplate_type == 'cli' %}
# Type Checking and Data Validation
typeguard = "^2.13.3" # Runtime type checker; Note: Mypyc-compiled C-extensions also perform runtime type checking.
#{%- endif %}

# Project-Specific
python-dotenv = ">=0.19.2,<0.22.0"
#{%- if cookiecutter.project_boilerplate_type == 'cli' %}
importlib-metadata = "^4.11.1"
rich = "^12.5.1"
typer = {extras = ["all"], version = ">=0.4,<0.7"}
#{%- else %}
numpy = "^1.22.3"
pandas = "^1.4.1"
#{%- endif %}

[tool.poetry.dev-dependencies]
# Standardized Developer Workflow Orchestration
cruft = "^2.11.1" # Automated Cookiecutter template synchronization

# Type Checking and Data Validation
mypy = "^0.971" # Static type checker (includes Mypyc Python module to C-Extension compiler, enabled by standard Python type annotations)

# Testing
#{%- if cookiecutter.jupyter_notebook_project != 'no' %}
nbqa = "^1.2.3"
#{%- endif %}
pytest = "^7.0.1"
#{%- if cookiecutter.jupyter_notebook_project != 'yes' %}
pytest-benchmark = {extras = ["histogram"], version = "^3.4.1"}
#{%- endif %}
pytest-cov = "^3.0.0"
pytest-emoji = "^0.2.0"
pytest-mock = "^3.7.0"
pytest-sugar = "^0.9.4"
pytest-xdist = "^2.5.0"
#{%- if cookiecutter.project_boilerplate_type == 'cli' %}
hypothesis = "^6.38.0"
#{%- endif %}
#{%- if cookiecutter.jupyter_notebook_project != 'yes' %}
mutmut = "^2.4.0"
#{%- endif %}
xdoctest = {extras = ["all"], version = "^0.15.10"}
tox = "^3.24.5"
tox-wheel = "^0.7.0"

# Linting
## Code formatting
black = "^22.3.0" # see: https://black.readthedocs.io/en/stable/editor_integration.html
## Code quality
pylint = "^2.12.2"
## Automation and management
pre-commit = "^2.17.0"

# CI/CD
tox-gh-actions = "^2.9.1"

# Documentation
darglint = "^1.8.1"
#{%- if cookiecutter.adr_documentation_support == 'yes' %}
nodeenv = "^1.6.0" # ADR documentation Node dependency
#{%- endif %}

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
emoji = "^1.6.3"
#{%- if cookiecutter.project_boilerplate_type != 'cli' %}
importlib-metadata = "^4.11.1"
#{%- endif %}
myst-parser = "^0.17.0"
pygments = "^2.11.2"
sphinx = "^4.4.0"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-confluencebuilder = "^1.7.1"
types-emoji = "^1.2.7" # PEP 561 compliant stub package for mypy

#{%- if cookiecutter.project_boilerplate_type != 'none' %}
[tool.poetry.scripts]
"{{cookiecutter.project_slug}}" = "{{cookiecutter.package_name}}.main:app"
#{%- endif %}

#################################################################################
# Tooling configs                                                               #
#################################################################################
[tool.coverage.run]
branch = true
concurrency = ["multiprocessing"]
parallel = true
source = ["{{cookiecutter.package_name}}"]

[tool.coverage.report]
exclude_lines =[
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
fail_under = 100
show_missing = true
skip_covered = true

[tool.cruft]
skip = [
    ".env",
    ".python-version",
    "{{cookiecutter.package_name}}/__init__.py",
    "docs/source/.env",
]

[tool.flakeheaven]
# specify any flake8 options
exclude = [".*"] # Ignore dotfiles
# make output nice
format = "grouped"
# show line of source code in output
show_source = true

# list of plugins and rules for them
[tool.flakeheaven.plugins]
# cyclomatic complexity (https://github.com/PyCQA/mccabe)
mccabe = ["+*"]
# include everything in pyflakes except F401
pyflakes = ["+*", "-F401"]
# include everything in pycodestyle except what Black covers
pycodestyle = ["+*",
    "-E203", # Whitespace before ":"
    "-E501", # Line too long (82 > 78 characters)
    "-W503",  # Line break occurred before a binary operator <- this is now considered best practice by PEP 8
#{%- if cookiecutter.jupyter_notebook_project != 'no' %}
    # Ignore errors resulting from Jupyter notebook to Python module portability formatting
    "-E265", # block comment should start with '# '
    # Ignore errors resulting from Jupyter notebook-style programming
    "-E402", # module level import not at top of file
#{%- endif %}
]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
fail-under = 0 # adjust `fail-under` value as quality standards permit
whitelist-regex = []
color = true

[tool.isort]
profile = "black"
atomic = true
combine_as_imports = true

[tool.mypy]
disallow_untyped_defs = true
files = "**/*.py"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_context = true
show_error_codes = true

[tool.pylint.basic]
good-names-rgxs = ["^Test_.*$"]

[tool.pylint.messages_control]
disable = [
  # Explicitly document only as needed
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  # Black & Flake8 purview
  "line-too-long",
  "c-extension-no-member",
#{%- if cookiecutter.jupyter_notebook_project != 'no' %}
  # Ignore errors resulting from Jupyter notebook-style programming
  "invalid-name",
  "redefined-outer-name",
  "reimported",
  "ungrouped-imports",
  "wrong-import-order",
  "wrong-import-position",
#{%- endif %}
]

[tool.pylint.similarities]
# Ignore imports when computing similarities.
ignore-imports = "yes"

[tool.pytest.ini_options]
addopts = ["-rfsxX", "-l", "--tb=short", "--strict-markers", "-vv", "--emoji", "--xdoctest"]
xfail_strict = true
markers = [
    "pure_python_only: mocker-based tests which are not compatible with compiled C extensions",
]
testpaths = ["tests",]
norecursedirs = [".*", "*.egg", "build", "dist",]

[build-system]
requires = ["poetry-core>=1.0.0",
    #{%- if cookiecutter.jupyter_notebook_project != 'yes' %}
    "mypy", "setuptools",
    #{% endif %}
]
build-backend = "poetry.core.masonry.api"
