[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.friendly_name}}"
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]
license = "Apache-2.0"
readme = "README.md"
repository = "{{ cookiecutter.project_repository_url }}"
homepage = "{{ cookiecutter.project_repository_url }}"
include = ["{{cookiecutter.package_name}}/py.typed"]
keywords = []
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

#{%- if cookiecutter.jupyter_notebook_project != 'yes' %}
[tool.poetry.build]
script = "build.py"
generate-setup-file = true
#{%- endif %}

[tool.poetry.urls]
Changelog = "{{ cookiecutter.project_repository_url }}/releases"

[tool.poetry.dependencies]
python = "^3.8,<3.12"

# Monitoring and Observability
sentry-sdk = "^1.11.0"
structlog-sentry-logger = "^0.18.0"

#{%- if cookiecutter.jupyter_notebook_project != 'no' %}
# Jupyter Notebook
jupyter = "^1.0.0"
matplotlib = "^3.6.2"
#{%- endif %}
#{%- if cookiecutter.project_boilerplate_type == 'cli' %}
# Type Checking and Data Validation
typeguard = "^2.13.3" # Runtime type checker; Note: Mypyc-compiled C-extensions also perform runtime type checking.
#{%- endif %}

# Project-Specific
python-dotenv = "^0.21.0"
#{%- if cookiecutter.project_boilerplate_type == 'cli' %}
importlib-metadata = "^5.0.0"
rich = "^12.5.1"
typer = {extras = ["all"], version = ">=0.4,<0.7"}
#{%- else %}
numpy = "^1.23.5"
pandas = "^1.5.0"
#{%- endif %}

[tool.poetry.group.dev.dependencies]
# Standardized Developer Workflow Orchestration
cruft = "^2.11.1" # Automated Cookiecutter template synchronization

# Type Checking and Data Validation
mypy = "^0.991" # Static type checker (includes Mypyc Python module to C-Extension compiler, enabled by standard Python type annotations)

# Testing
#{%- if cookiecutter.jupyter_notebook_project != 'no' %}
nbqa = "^1.5.3"
#{%- endif %}
pytest = "^7.2.0"
#{%- if cookiecutter.jupyter_notebook_project != 'yes' %}
pytest-benchmark = {extras = ["histogram"], version = "^4.0.0"}
#{%- endif %}
pytest-cov = "^4.0.0"
pytest-emoji = "^0.2.0"
pytest-mock = "^3.10.0"
pytest-sugar = "^0.9.4"
pytest-xdist = "^3.0.2"
#{%- if cookiecutter.project_boilerplate_type == 'cli' %}
hypothesis = "^6.58.0"
#{%- endif %}
#{%- if cookiecutter.jupyter_notebook_project != 'yes' %}
mutmut = "^2.4.2"
#{%- endif %}
xdoctest = {extras = ["all"], version = "^1.1.0"}
tox = "^3.27.1"
tox-wheel = "^1.0.0"

# Linting
## Code formatting
black = "^22.10.0" # see: https://black.readthedocs.io/en/stable/editor_integration.html
## Automation and management
pre-commit = "^2.20.0"

# CI/CD
tox-gh-actions = "^2.11.0"

# Documentation
darglint = "^1.8.1"
#{%- if cookiecutter.adr_documentation_support == 'yes' %}
nodeenv = "^1.7.0" # ADR documentation Node dependency
#{%- endif %}

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
emoji = "^2.2.0"
#{%- if cookiecutter.project_boilerplate_type != 'cli' %}
importlib-metadata = "^5.0.0"
#{%- endif %}
myst-parser = "^0.18.1"
pygments = "^2.13.0"
sphinx = "^5.3.0"
sphinx-autoapi = "^2.0.0"
sphinx-rtd-theme = "^1.1.1"
sphinxcontrib-confluencebuilder = "^1.9.0"
types-emoji = "^2.1.0.1" # PEP 561 compliant stub package for mypy

#{%- if cookiecutter.project_boilerplate_type != 'none' %}
[tool.poetry.scripts]
"{{cookiecutter.project_slug}}" = "{{cookiecutter.package_name}}.main:app"
#{%- endif %}

#################################################################################
# Tooling configs                                                                #
#################################################################################
[tool.black]
line-length = 120

[tool.coverage.run]
branch = true
concurrency = ["multiprocessing"]
parallel = true
source = ["{{cookiecutter.package_name}}"]

[tool.coverage.report]
exclude_lines =[
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
fail_under = 100
show_missing = true
skip_covered = true

[tool.cruft]
skip = [
    ".env",
    ".python-version",
    "{{cookiecutter.package_name}}/__init__.py",
    "docs/source/.env",
]

[tool.flakeheaven]
# specify any flake8 options
exclude = [".*"] # Ignore dotfiles
# make output nice
format = "grouped"
# show line of source code in output
show_source = true

# list of plugins and rules for them
[tool.flakeheaven.plugins]
# cyclomatic complexity (https://github.com/PyCQA/mccabe)
mccabe = ["+*"]
# include everything in pyflakes except F401
pyflakes = ["+*", "-F401"]
# include everything in pycodestyle except what Black covers
pycodestyle = ["+*",
    "-E203", # Whitespace before ":"
    "-E501", # Line too long (82 > 78 characters)
    "-W503",  # Line break occurred before a binary operator <- this is now considered best practice by PEP 8
#{%- if cookiecutter.jupyter_notebook_project != 'no' %}
    # Ignore errors resulting from Jupyter notebook to Python module portability formatting
    "-E265", # block comment should start with '# '
    # Ignore errors resulting from Jupyter notebook-style programming
    "-E402", # module level import not at top of file
#{%- endif %}
]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
fail-under = 0 # adjust `fail-under` value as quality standards permit
whitelist-regex = []
color = true

[tool.mypy]
disallow_untyped_defs = true
files = "**/*.py"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_context = true
show_error_codes = true

#{%- if cookiecutter.jupyter_notebook_project != 'no' %}
[tool.pylint.messages_control]
disable = [
  # Ignore errors resulting from Jupyter notebook-style programming
  "invalid-name",
  "redefined-outer-name",
  "reimported",
  "ungrouped-imports",
  "wrong-import-order",
  "wrong-import-position",
]
#{%- endif %}

[tool.pytest.ini_options]
addopts = ["-rfsxX", "-l", "--tb=short", "--strict-markers", "-vv", "--emoji", "--xdoctest"]
xfail_strict = true
markers = [
    "pure_python_only: mocker-based tests which are not compatible with compiled C extensions",
]
testpaths = ["tests",]
norecursedirs = [".*", "*.egg", "build", "dist",]

[tool.ruff]
line-length = 120

select = [
    "I", # isort
    "PLC", "PLE", "PLR", "PLW", # Pylint
]

ignore = [
    # pycodestyle:
    "E501", # Line too long (covered by Black)
]

fix = true

# Group violations by containing file.
format = "grouped"

# By default, always show source code snippets.
show-source = true

[tool.ruff.isort]
# Note: Ruff implicitly uses `profile = "black"`
combine-as-imports = true

[build-system]
requires = ["poetry-core>=1.0.0",
    #{%- if cookiecutter.jupyter_notebook_project != 'yes' %}
    "mypy", "setuptools",
    #{% endif %}
]
build-backend = "poetry.core.masonry.api"
